# xiuxian-artisan-workshop

./: .devcontainer.json  .envrc  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  devenv.nix  devenv.yaml  flake.nix  justfile  pyproject.toml  repomix.config.json  secretspec.toml  trinity_report.bpmn  wendao.toml
.agent/: PLANS.md
.agent/blueprints/: _template.md
.agent/execplans/: _template.md  enable-execplan-mode.md  mcp-rust-observability-migration.md  responses-tool-call-integrity.md
.codex/: config.toml
.github/: settings.yml
.github/workflows/: checks.yaml  ci.yaml  omni-agent-memory-gates.yaml  xiuxian-daochang-embedding-gates.yaml  xiuxian-daochang-memory-gates.yaml  xiuxian-daochang-valkey-live.yaml  xiuxian-wendao-performance-gates.yaml
assets/: github-repo-list.toml
assets/how-to/: agent-native-development.md  documentation-workflow.md  gitops.md  rag-usage.md  testing-workflows.md
assets/instructions/: documentation-standards.md  modern-workflows.md  problem-solving.md  project-conventions.md
assets/skills/: README.md
assets/specs/: template.md  xml-qa-schema-augmentation.md  zettelkasten-knowledge-architecture.md
docs/: DOCUMENTATION_DESIGN.md  LLM_DOCUMENTATION_POLICY.md  index.md  sentinel-test.md
docs/00_vision/: ROOT_INDEX.md  TRINITY_MANIFESTO.md  VS_OBSIDIAN.md
docs/02_dev/: HANDBOOK.md
docs/03_features/: qianhuan-audit-closure.md  session_governance.md  wendao-agentic-retrieval.md  wendao-context-snapshot.md  wendao-living-brain.md  wendao-multimodal-mapping.md  xiuxian_zhixing_heyi.md
docs/04_chronicles/: 20260315-cognitive-sovereignty-achieved.md
docs/99_llm/: READING_GUIDE.md  langgraph-workflow-guide.md  llm-brain-map.md  memory-context.md  native-workflow-guide.md  routing-guide.md  skill-discovery.md  xiuxian_zhixing_theory.md
docs/GTD/: AUDIT_TRACKER.md  DAILY.md  DAILY_2026_03_14.md  DAILY_2026_03_16.md  DAILY_2026_03_17.md  DAILY_2026_03_18.md  DAILY_2026_03_19.md  DAILY_2026_03_20.md  DAILY_2026_03_21.md  DAILY_2026_03_22.md  DAILY_2026_03_23.md  DAILY_2026_03_24.md  DAILY_2026_03_25.md  DAILY_2026_03_26.md  DAILY_2026_03_27.md  DAILY_2026_03_28.md  DAILY_2026_03_29.md  DAILY_2026_03_30.md  DAILY_2026_03_31.md  DAILY_2026_04_01.md  DAILY_2026_04_02.md  DAILY_2026_04_03.md  DAILY_2026_04_04.md  DAILY_2026_04_05.md  DAILY_2026_04_06.md  DAILY_2026_04_07.md  DAILY_2026_04_08.md  DAILY_2026_04_09.md  DAILY_2026_04_10.md
docs/contracts/: wendao-flight-runtime-host-settings-contract.md
docs/developer/: ast-grep-core.md  cli.md  discover.md  hot-reload.md  knowledge-search-improvements.md  mcp-core-architecture.md  routing.md  testing.md
docs/reference/: vector-search-options-contract.md
docs/rfcs/: 2026-03-26-wendao-query-engine-rfc.md  2026-03-27-wendao-arrow-plugin-flight-rfc.md  2026-03-27-wendao-core-runtime-plugin-migration-rfc.md  2026-03-29-python-arrow-flight-boundary-rfc.md  2026-03-31-python-wendao-analyzer-package-rfc.md  2026-03-31-wendao-flight-query-contract-evolution-rfc.md  2026-04-05-wendao-memory-layer-boundaries-rfc.md  2026-04-06-arrow-schema-first-julia-compute-abi-for-wendao-memory-family.md  2026-04-08-wendao-qianji-duckdb-bounded-analytics-rfc.md
docs/standards/: AUDITOR_CODEX.md
docs/testing/: README.md  graphflow_modularization.md  keyword-backend-decision-report-v4.md  keyword-backend-decision-report.md  keyword-backend-decision.md  keyword-backend-detailed-comparison-v3.md  keyword-backend-llm-reliability-batch-report.md  keyword-backend-multi-model-report.md  keyword-backend-replacement-evidence-v4.md  keyword-backend-report-template.md  keyword-backend-statistical-evidence.md  keyword-backend-statistical-report.md  keyword-backend-usage-guide.md  keyword-eval-model-profiles.md  llm_comprehension_test.md  omni-agent-live-multigroup-runbook.md  omni-agent-valkey-webhook-tracking.md  router-file-discovery-intent-report.md  routing-quality-analysis.md  rust-agent-loop-memory-testing.md  scenario-test-driven-autofix-loop.md  skills-tools-benchmark-ci.md  test_kit_modernization.md  wendao-query-regression-matrix.json  xiuxian-daochang-live-multigroup-runbook.md  xiuxian-daochang-valkey-webhook-tracking.md
internal_skills/wendao/: SKILL.md
nix/modules/: claude.nix  lefthook.nix  llm.nix  process.nix  python.nix  rust.nix  tasks.nix
oci/valkey/: Containerfile
scripts/: README.md  benchmark_json_vs_arrow.py  benchmark_knowledge_recall.py  benchmark_rust_core.py  benchmark_skills_tools.py  benchmark_skills_tools_ci.sh  benchmark_skills_tools_gate.sh  benchmark_wendao_gateway_openapi.ts  benchmark_wendao_related.py  benchmark_wendao_search.py  bootcamp_adversarial_v2.py  ci-contract-freeze.sh  ci-local-recall-gates.sh  ci_scripts_smoke.sh  compare_cli_runner_summary.py  compare_memory_usage.py  contract_freeze_lock.py  evaluate_wendao_retrieval.py  evaluate_wendao_retrieval.sh  fetch_previous_skills_benchmark_artifact.py  fetch_vision_models.py  gate_wendao_ppr.sh  generate_keyword_backend_decision_report.py  generate_keyword_backend_statistical_report.py  generate_llm_index.py  generate_vector_search_options_contract.py  guarded_nextest.py  llm_fingerprint_audit.py  llm_provider_smoke.py  recall_profile.py  recall_profile_phases.py  render_embedding_role_perf_summary.py  render_skills_tools_ci_summary.py  render_wendao_gate_line.py  render_wendao_gate_status_summary.py  render_wendao_gateway_perf_summary.py  render_wendao_ppr_rollout_status.py  render_wendao_rollout_gate_line.py  run_keyword_backend_llm_eval.py  run_minimal_load_test.py  (+33 more)
scripts/channel/: acceptance_runner_pipeline_steps_initial_core.py  acceptance_runner_pipeline_steps_initial_matrix.py  acceptance_runner_pipeline_steps_scenarios.py  agent-channel-acceptance.sh  agent-channel-blackbox.sh  agent-channel-polling.sh  (+328 more)
skills/: README.md  __init__.py
tests/: test_valkey_oci_containerfile.py  test_valkey_process_nix.py  test_wendao_frontend_health.py  test_wendao_frontend_launch_script.py  test_wendao_frontend_process_nix.py  test_wendao_gateway_process_nix.py
(+234 files in other folders)
