[workspace]
resolver = "2"

# Include all Rust crates explicitly (no glob to avoid missing crate errors)
members = [
    "packages/rust/bindings/python",
    "packages/rust/crates/xiuxian-config-core",
    "packages/rust/crates/xiuxian-ast",
    "packages/rust/crates/xiuxian-edit",
    "packages/rust/crates/xiuxian-event",
    "packages/rust/crates/xiuxian-executor",
    "packages/rust/crates/xiuxian-io",
    "packages/rust/crates/xiuxian-wendao",
    "packages/rust/crates/xiuxian-lance",
    "packages/rust/crates/xiuxian-macros",
    "packages/rust/crates/xiuxian-memory-engine",
    "packages/rust/crates/xiuxian-logging",
    "packages/rust/crates/xiuxian-skills",
    "packages/rust/crates/xiuxian-security",
    "packages/rust/crates/xiuxian-sandbox",
    "packages/rust/crates/xiuxian-tags",
    "packages/rust/crates/xiuxian-tokenizer",
    "packages/rust/crates/xiuxian-tui",
    "packages/rust/crates/xiuxian-types",
    "packages/rust/crates/xiuxian-vector",
    "packages/rust/crates/xiuxian-qianhuan",
    "packages/rust/crates/xiuxian-llm",
    "packages/rust/crates/xiuxian-wendao-modelica",
    "packages/rust/crates/xiuxian-window",
    "packages/rust/crates/xiuxian-mcp",
    "packages/rust/crates/xiuxian-daochang",
    "packages/rust/crates/xiuxian-qianji",
    "packages/rust/crates/xiuxian-memory",
    "packages/rust/crates/xiuxian-zhixing",
    "packages/rust/crates/xiuxian-zhenfa",
    "packages/rust/crates/xiuxian-testing",
]

# Workspace package metadata (inherited by all crates)
[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["CyberXiuXian Artisan Studio"]
license = "Apache-2.0"
publish = false
description = "CyberXiuXian Artisan Workshop - High-performance Agentic OS with Rust Core"

# Unified dependency management
[workspace.dependencies]
# Core dependencies
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0.100"
thiserror = "2.0.17"
walkdir = "2.5.0"
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4.38", default-features = false }
chrono-tz = "0.10.4"
tracing = "0.1"
tracing-log = "0.2"
globset = "0.4"
include_dir = "0.7.4"
rand = "0.8"
futures = "0.3.32"
tokio-util = "0.7.18"
md5 = "0.8.0"
comrak = { version = "0.50.0", default-features = false }
pulldown-cmark = "0.10"
quick-xml = "0.39.2"
petgraph = "0.7"
async-trait = "0.1"
mistralrs = "0.7.0"

# Git operations (libgit2 for performance)
git2 = "0.20.3"

# Python bindings - Python 3.13 support via PyO3 0.27+
pyo3 = { version = "0.27.2", features = ["extension-module"] }
pyo3-asyncio = { version = "0.27", features = ["tokio"] }

# Safe I/O & Tokenization
tiktoken-rs = "0.9.1"
memchr = "2.7.6"
tempfile = "3.24"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
tokenizers = "0.22.2"

# JSON Schema generation for Schema Singularity (SSOT)
schemars = "1.2.0"
jsonschema = "0.18.3"
specta = { version = "2.0.0-rc.23", features = ["derive"] }
specta-typescript = "0.0.10"

# LanceDB for vector storage (2.0: v2 manifest default, create_index returns IndexMetadata)
lance = { version = "2.0", default-features = false }
lance-arrow = "2.0"

# Arrow IPC for analytics (Rust RecordBatch → bytes → Python pyarrow); used in bindings only
arrow = "57"
arrow-ipc = "57"

# Redis cache and session backend
redis = { version = "1.0.3", default-features = false }

# Logging
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Parallel processing
rayon = "1.11"

# MCP client (xiuxian-daochang Phase A; ref: codex-rs rmcp-client)
# Note: rmcp 0.16 still requires "server" feature for client build (task_manager/handler refs)
rmcp = { version = "0.16", default-features = false, features = [
    "client",
    "server",
    "macros",
    "schemars",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
    "transport-child-process",
] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
litellm-rs = { git = "https://github.com/majiayu000/litellm-rs", tag = "v0.4.2", default-features = false }

# CLI and HTTP (xiuxian-daochang gateway)
clap = { version = "4.5", features = ["derive"] }
axum = "0.8"

# Testing utilities
insta = { version = "1.46.3", features = ["json", "redactions"] }

# Performance optimization - Thin LTO for reduced memory
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"     

[profile.dev]
debug = 1 
split-debuginfo = "unpacked" 


[workspace.lints.rust]
unsafe_code = "deny"       # Default deny unsafe unless explicitly allowed
missing_docs = "warn"      # Public APIs must have documentation

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"       # Deny unwrap usage in production
expect_used = "deny"       # Deny expect usage in production

[patch."https://github.com/TimmyOVO/deepseek-ocr.rs"]
deepseek-ocr-core = { path = "third_party/deepseek-ocr/crates/core" }
deepseek-ocr-dsq = { path = "third_party/deepseek-ocr/crates/dsq" }
deepseek-ocr-dsq-runtime = { path = "third_party/deepseek-ocr/crates/dsq-runtime" }
deepseek-ocr-infer-deepseek = { path = "third_party/deepseek-ocr/crates/infer-deepseek" }
